# Quote-Maker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  todo.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/: config.py
quote_maker/: main.py
src/quote_maker/: __init__.py  facebook.py  generator.py  generator_cy.c  generator_cy.pyx  main.py  quote_fetcher.py
tests/: test_generator.py
